# scheduler

./: .dockerignore  .env  .env.sample  .env.test  .gitignore  Dockerfile  README.md  cleaned_output.json  docker-compose-dev.override.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  grobid.yaml  grouped_by_title.json  grouped_data.json  pyproject.toml  test_type.py
celery_app/: main.py
celery_app/scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
celery_app/tasks/: embed.py  maintenance.py  process.py  scrape.py
celery_app/utils/: dedup.py  embedder.py  paper_schema.py  text_cleaner.py
config/: celery_config.py  logging.py  settings.py
output/: chunks_2606.20564_20260623_162833.json  chunks_2606.20564_20260623_194828.json
scheduler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test_docling.py  test_scrape.py  trigger_scrape.py  warm_model_cache.py
src/atlaner/celery_app/: main.py
src/atlaner/celery_app/tasks/: embed.py  maintenance.py  process.py  scrape.py
src/atlaner/config/: celery_config.py  logging.py  settings.py
src/atlaner/models/: document.py
src/atlaner/scripts/: reset_paper.py  test_scrape.py  trigger_scrape.py
src/atlaner/storage/: db.py  depot.py
src/atlaner/utils/: dedup.py  embedder.py  text_cleaner.py
src/atlaner/webapi/: main.py  schemas.py
src/atlazer/celery_app/: main.py
src/atlazer/celery_app/tasks/: challenge.py  embed.py  evaluation.py  maintenance.py  matcher.py  process.py  scrape.py  store.py  webapi.py
src/atlazer/config/: celery_config.py  logging.py  settings.py
src/atlazer/models/: __init__.py  challenge.py  document.py  evaluation.py  paper.py  user.py
src/atlazer/scripts/: convert_bge_m3.py  export_onnx.py  gemini_check_batching.py  gemini_generate_webhook.py  reset_paper.py  stanza_warmup.py  test_challenge.py  test_increment.py  test_matcher.py  test_scrape.py  trigger_scrape.py
src/atlazer/storage/: challenge.py  db.py  depot.py  matcher.py  paper.py  progress.py  user.py
src/atlazer/utils/: answer_scoring.py  dedup.py  embedder.py  gemini_batch.py  stanza_chunker.py  text_cleaner.py
src/atlazer/webapi/: main.py  schemas.py
src/curiosift_miner/celery_app/: main.py
src/curiosift_miner/celery_app/tasks/: embed.py  maintenance.py  process.py  scrape.py
src/curiosift_miner/celery_app/utils/: dedup.py  embedder.py  paper_schema.py
src/curiosift_miner/config/: celery_config.py  logging.py  settings.py
src/curiosift_miner/models/: paper_schema.py
src/curiosift_miner/scripts/: reset_paper.py  test_db.py  test_scrape.py  trigger_scrape.py
src/curiosift_miner/storage/: db.py  depot.py
src/curiosift_miner/utils/: embedder.py
src/curiosift_miner/webapi/: config.py  embeddings.py  main.py  rag.py  schemas.py  vector_store.py
tests/: test_challenge.py  test_gemini_batch.py  test_generate_jsonl.py  test_increment.py  test_matcher.py  test_matcher_batch.py  test_scoring.py  test_scrape.py  test_stanza_chunker.py
