[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "0.1.0"
description = "Curiosift Indexer Scheduler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ─── Celery & Broker ──────────────────────────────────────────
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "kombu==5.3.7",

    # ─── ArXiv Scraping ───────────────────────────────────────────
    "arxiv==4.0.0",
    "httpx==0.28.0",
    "feedparser==6.0.11",
    "requests==2.32.3",

    # ─── Text Processing & Chunking ───────────────────────────────
    "langchain-text-splitters==0.3.3",
    "tiktoken==0.8.0",
    "unstructured==0.16.11",
    "pymupdf==1.27.2.3",
    "docling>=1.20.0",
    "easyocr==1.7.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy<=2.0.0",

    # ─── Embeddings ───────────────────────────────────────────────
    # "openai==1.57.4",
    # "sentence-transformers==3.3.1",

    # ─── Observability ────────────────────────────────────────────
    "flower==2.0.1",
    "prometheus-client==0.21.1",
    "structlog==24.4.0",

    # ─── Utils ────────────────────────────────────────────────────
    "pydantic==2.10.3",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
    "orjson==3.10.12"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=executor --cov-report=term-missing"

[tool.setuptools]
package-dir = {"" = "celery_app"}

[tool.setuptools.packages.find]
where = ["celery_app"]