[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlazer"
version = "0.1.0"
description = "ATLANIZE Paper Miner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ─── Celery & Broker ──────────────────────────────────────────
    "celery[redis]==5.6.3",
    "redis==5.2.1",
    "kombu==5.6.2",

    # ─── ArXiv Scraping ───────────────────────────────────────────
    "arxiv==4.0.0",
    "httpx==0.28.1",
    "requests==2.32.3",

    # ─── Text Processing & Chunking ───────────────────────────────
    "langchain-text-splitters==1.1.2",
    "tiktoken==0.9.0",
    "grobid-client-python==0.1.4",

    # ─── Embeddings ───────────────────────────────────────────────
    "sentence_transformers[onnx]==5.6.0",
    "transformers<5.0.0",

    # ─── Observability ────────────────────────────────────────────
    "flower==2.0.1",
    "prometheus-client==0.25.0",
    "structlog==26.1.0",

    # ─── Utils ────────────────────────────────────────────────────
    "pydantic>=2.10.3",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
    "watchdog[watchmedo]==4.0.2",

    # ─── Database ──────────────────────────────────────────────
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "sqlalchemy>=2.0.51",

    # ─── Web API ──────────────────────────────────────────────
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=executor --cov-report=term-missing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlazer*"]